change color background, remove unused posts

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 /* Markdown */
 :root{
---maincolor: rgb(34, 37, 37);
+--maincolor: red;
 --bordercl:rebeccapurple;
 --callouctcolor:dodgerblue;
 --hovercolor:navy;
