update theme to hello-friend and posts

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 /* Markdown */
 :root{
---maincolor: red;
+--maincolor: rgb(34, 37, 37);
 --bordercl:rebeccapurple;
 --callouctcolor:dodgerblue;
 --hovercolor:navy;
